# SFML-GameOfLife

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh
assets/presets/: B-Heptomino.txt  GliderGun.txt  SymmetryAcorn.txt
include/: DEFINITIONS.hpp
include/machine/: State.hpp  StateMachine.hpp
include/managers/: AssetManager.hpp
include/models/: Board.hpp  Cell.hpp  Game.hpp
include/states/: GameState.hpp  MenuState.hpp  SplashState.hpp
src/: App.cpp
src/machine/: StateMachine.cpp
src/managers/: AssetManagers.cpp
src/models/: Board.cpp  Cell.cpp  Game.cpp
src/states/: GameState.cpp  MenuState.cpp  SplashState.cpp
